--- a/TPFinalNivel2_Romani/AdministradorDeArticulos/AdministradorDeArticulos.csproj
+++ b/TPFinalNivel2_Romani/AdministradorDeArticulos/AdministradorDeArticulos.csproj
@@ -59,6 +59,12 @@
     <Compile Include="frmAgregarArticulo.Designer.cs">
       <DependentUpon>frmAgregarArticulo.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmDetallesDelArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDetallesDelArticulo.Designer.cs">
+      <DependentUpon>FrmDetallesDelArticulo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -66,6 +72,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmAgregarArticulo.resx">
       <DependentUpon>frmAgregarArticulo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmDetallesDelArticulo.resx">
+      <DependentUpon>FrmDetallesDelArticulo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
